--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ toml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 clap = { version = "4.4", features = ["derive"] }
+evalexpr = "11.3"
+serde_yaml = "0.9"
