--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde_derive = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 evalexpr = "11.3"
 serde_yaml = "0.9"
+getrandom = { version = "0.2.12", features = ["js"] }
