--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
+      run: cargo clean
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
