--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - name: Clean
       run: cargo clean
+    - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
