--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Clean
       run: cargo clean
-    - name: Build
-      run: cargo build --verbose
+    - name: Build cli
+      run: cargo build --feature cli --verbose
     - name: Run tests
+      run: cargo test --verbose
+    - name: Build wasm
+      run: cargo build --feature wasm --verbose
+    - name: Run tests wasm
       run: cargo test --verbose
